# plant-guard

./: .gitignore  .gitmodules  Dockerfile  README.md  client-run.bash  docker-build.bash  docker-entrypoint.sh  docker-run-zenoh-test-pub.bash  docker-run.bash  env.bash  plant_guard.py  plant_guard_control.py  plant_guard_job.py
models/: README.md  arm-Arm.3mf  arm-Arm.stl  arm-Base.3mf  arm-Base.stl  arm.FCStd  arm.stl  motor-holder-Body003.stl  motor-holder.FCStd  planks.ods  pump-crane-plants.FCStd
pg_ws/src/mocked_rpi/: package.xml  setup.cfg  setup.py
pg_ws/src/mocked_rpi/RPi/: GPIO.py
pg_ws/src/mocked_spidev/: package.xml  setup.cfg  setup.py
pg_ws/src/mocked_spidev/spidev/: __init__.py
pg_ws/src/pg_job_management/: package.xml  setup.cfg  setup.py
pg_ws/src/pg_job_management/pg_job_management/: job_server.py  jobs_common.py
pg_ws/src/pg_moisture_sensor/: ADS1256-readme.txt  package.xml  setup.cfg  setup.py
pg_ws/src/pg_moisture_sensor/pg_moisture_sensor/: ADS1256.py  config.py  device.py  moisture_sensor.py
pg_ws/src/pg_moisture_sensor_msgs/: CMakeLists.txt  package.xml
pg_ws/src/pg_moisture_sensor_msgs/action/: PerformJob.action
pg_ws/src/pg_moisture_sensor_msgs/msg/: Config.msg  ConfigStamped.msg  Job.msg  Sensor.msg
pg_ws/src/pg_msgs/: CMakeLists.txt  package.xml
pg_ws/src/pg_msgs/msg/: BoolStamped.msg  Device.msg  Float64ArrayStamped.msg  Float64Stamped.msg  Job.msg  MeasurementHeader.msg
pg_ws/src/pg_msgs/srv/: EditDevice.srv  EditJob.srv  GetDeviceList.srv  GetJobList.srv  GetState.srv
pg_ws/src/pg_pump_crane/: package.xml  setup.cfg  setup.py
pg_ws/src/pg_pump_crane/pg_pump_crane/: device.py  pump_crane.py  pump_crane_control.py  pump_crane_job_client.py  pump_crane_job_simple.py  pump_crane_keyboard.py
pg_ws/src/pg_pump_crane_msgs/: CMakeLists.txt  package.xml
pg_ws/src/pg_pump_crane_msgs/msg/: Config.msg  Job.msg
pg_ws/src/pg_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
pg_ws/src/pg_rviz_plugins/include/pg_rviz_plugins/: common.hpp  moisture_sensor_panel.hpp  plant_guard_panel.hpp  pump_crane_joystick.hpp  pump_crane_panel.hpp
pg_ws/src/pg_rviz_plugins/include/pg_rviz_plugins/impl/: common_impl.hpp
pg_ws/src/pg_rviz_plugins/src/: common.cpp  moisture_sensor_panel.cpp  plant_guard_panel.cpp  pump_crane_joystick.cpp  pump_crane_panel.cpp
pg_ws/src/pg_state_management/: package.xml  setup.cfg  setup.py
pg_ws/src/pg_state_management/pg_state_management/: state_client.py  state_server.py
pg_ws/src/pgpc_msgs/: CMakeLists.txt  package.xml
pg_ws/src/pgpc_msgs/action/: PerformJob.action
pg_ws/src/plantguard_bringup/: CMakeLists.txt  LICENSE  package.xml  setup.cfg  setup.py
pg_ws/src/plantguard_bringup/launch/: camera.launch.py  pump_crane.launch.py  pump_crane_client.launch.py  zenoh_test_pub.launch.py  zenoh_test_sub.launch.py
pg_ws/src/plantguard_bringup/params/: bagtube.yaml  camera.yaml
pg_ws/src/plantguard_bringup/rviz/: plant_guard.rviz
