<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pg_rviz_plugins</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matej.vargovcik@gmail.com">Matej Vargovcik</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rclcpp</depend>
  <depend>pg_msgs</depend>
  <depend>pg_pump_crane_msgs</depend>
  <depend>pg_moisture_sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>bagtube_rviz_plugins</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
