<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plantguard_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for running PlantGuard</description>
  <maintainer email="matej.vargovcik@gmail.com">Matej Vargovcik</maintainer>
  <license>MIT</license>

  <depend>usb_cam</depend>
  <depend>zenoh_bridge_dds</depend>
  <depend>pg_pump_crane</depend>
  <depend>pg_moisture_sensor</depend>
  <depend>pg_job_management</depend>
  <depend>image_transport_tmp</depend>
  <depend>camera_ros</depend>
  <depend>ffmpeg_image_transport</depend>

  <test_depend>demo_nodes_cpp</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
